force-app/main/default/objects/Cars__c/fields/Car_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Car_Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Manufacturer</label>
    <referenceTo>Car_Manufacturers__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>