force-app/main/default/objects/Cars__c/fields/Is_Model_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Model_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Model Active</label>
    <type>Checkbox</type>
</CustomField>