force-app/main/default/objects/Cars__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <label>VIN</label>
    <length>250</length>
    <type>Text</type>
</CustomField>