force-app/main/default/objects/Cars__c/recordTypes/Fast_Cars.recordType-meta.xml
<RecordType>
    <fullName>Fast_Cars</fullName>
    <active>true</active>
    <label>Fast Cars</label>
</RecordType>