force-app/main/default/objects/Cars__c/recordTypes/Slow_Cars.recordType-meta.xml
<RecordType>
    <fullName>Slow_Cars</fullName>
    <active>true</active>
    <label>Slow Cars</label>
</RecordType>