force-app/main/default/objects/Cars__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expected_Price__c</columns>
    <columns>Car_Manufacturer__c</columns>
    <columns>Model_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Model_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>